--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,14 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
+      "src": "icon1.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "icon2.png",
+      "type": "image/png",
+      "sizes": "452x452"
     }
   ],
   "start_url": ".",
